# gen_sandbox

./: .clang-tidy  .gitignore  CMakeLists.txt  sample.ttl
.github/workflows/: cmake-single-platform.yml  codeql.yml  coverage.yml
code/common/: .gitignore  CMakeLists.txt
code/common/include/: command_line_utils.hpp  file_system_utils.hpp  person.hpp  redland_utils.hpp
code/common/include/common/: command_line_utils.hpp  common_exception.hpp  comparators.hpp  contract.hpp  data_table.hpp  file_system_utils.hpp  note.hpp  person.hpp  redland_utils.hpp  resource.hpp  resource_utils.hpp  spdlog_utils.hpp  string.hpp  traits.hpp  variable.hpp  variable_utils.hpp
code/common/src/: command_line_utils.cpp  common_exception.cpp  contract.cpp  data_table.cpp  file_system_utils.cpp  note.cpp  person.cpp  redland_utils.cpp  resource.cpp  resource_utils.cpp  spdlog_utils.cpp  string.cpp  traits.cpp  variable.cpp  variable_utils.cpp
code/common/test/: .gitignore  CMakeLists.txt
code/common/test/data/resource_utils/: model-01_resource-state-variants.ttl
code/common/test/include/test/tools/: application.hpp  assertions.hpp  error.hpp  gtest.hpp  matchers.hpp  note.hpp  person.hpp  printers.hpp  redland.hpp  resource.hpp  string.hpp  variable.hpp
code/common/test/src/: application.cpp  assertions.cpp  contract.cpp  data_table.cpp  main.cpp  note.cpp  person.cpp  redland_utils.cpp  resource.cpp  resource_utils.cpp  string.cpp  variable.cpp  variable_utils.cpp
code/common/test/src/tools/: application.cpp  assertions.cpp  error.cpp  note.cpp  person.cpp  redland.cpp  resource.cpp  string.cpp  variable.cpp
code/person/: .gitignore  CMakeLists.txt
code/person/include/: queries.hpp
code/person/include/person/: error.hpp  option_parser.hpp  queries.hpp
code/person/include/person/command/: common.hpp  deps.hpp  details.hpp  list.hpp  targets.hpp
code/person/include/person/queries/: common.hpp  deps.hpp  details.hpp
code/person/src/: error.cpp  main.cpp  option_parser.cpp  queries.cpp
code/person/src/command/: common.cpp  deps.cpp  details.cpp  list.cpp  targets.cpp
code/person/src/queries/: common.cpp  deps.cpp  details.cpp
code/person/test/: .gitignore  CMakeLists.txt
code/person/test/data/deps_queries/retrieve_person_parents/normal_success_cases/: model-00_no-parents.ttl  model-03_both-parents.ttl  model-04_two-families-three-generations.ttl  model-05_multiple-resources-found-error.ttl
code/person/test/data/deps_queries/retrieve_person_partners/normal_success_cases/: model-02_two-partners.ttl  model-03_three-generations.ttl
code/person/test/data/deps_queries/retrieve_related_persons/normal_success_cases/: case0.ttl  case1.ttl  case2.ttl  case3_single-family-inferred.ttl
code/person/test/data/queries/common/retrieve_person_caption_data/: model-01_normal-success-cases.ttl
code/person/test/data/queries/details/retrieve_person_parent/: model-01_father-only.ttl  model-02_mother-only.ttl  model-03_both-parents.ttl
code/person/test/data/queries/details/retrieve_person_partners/: model-00_no-partner.ttl  model-01_one-couple.ttl  model-02_two-couples.ttl  model-03_three-generations.ttl  model-04_owl-84-repro.ttl  model-05_three-generations-some-inferred.ttl  model-06_invalid-partners.ttl  model-06_partner-chain.ttl  model-07_three-couples.ttl  model-08_single-parent.ttl
code/person/test/include/test/tools/person/: comparable_note_factory.hpp
code/person/test/src/: error.cpp  main.cpp
code/person/test/src/command/: deps.cpp
code/person/test/src/queries/: common.cpp  deps.cpp  details.cpp
code/person/test/src/test/tools/person/: comparable_note_factory.cpp
code/sandbox/: .gitignore  CMakeLists.txt
code/sandbox/src/: main.cpp
data/people/: batch1.ttl  batch2.ttl
docs/: gen.dox  terms-and-definitions.md
scripts/: run_coverage.sh
src/: main.cpp  redland_utils.cpp  redland_utils.hpp
